--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "blog",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://lastshadowpl.github.io/react-blog-build/",
   "dependencies": {
-    "@types/react-router": "^4.0.15",
+    "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.0.8",
     "@types/uuid": "^3.4.3",
     "fs": "0.0.1-security",
+    "jest-cli": "^21.2.1",
     "jquery": "^3.2.1",
     "materialize": "^1.0.0",
     "react": "^16.0.0",
@@ -23,9 +24,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.3",
-    "@types/node": "^8.0.43",
-    "@types/react": "^16.0.13",
-    "@types/react-dom": "^16.0.1"
+    "@types/jest": "^21.1.4",
+    "@types/node": "^8.0.46",
+    "@types/react": "^16.0.18",
+    "@types/react-dom": "^16.0.2"
   }
 }
